--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "express": "^4.17.1",
+    "flatted": "^2.0.1",
+    "moment": "^2.24.0",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "axios": "^0.18.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-axios": "^0.0.4",
     "vue-template-compiler": "^2.6.10"
   }
 }
